Remove special warfare sponsor

--- a/index.html
+++ b/index.html
@@ -166,11 +166,11 @@
           <img class="img-fluid" src="./images/sponsors/Subway.png" alt="Subway">
         </a>
       </div>-->
-      <div class="col my-auto">
+      <!-- <div class="col my-auto">
         <a href="https://www.airforce.com/careers/indemand-careers/special-warfare" target="_blank">
           <img class="img-fluid" src="./images/sponsors/USAF_SpecialWarfare_K.png" alt="United States Air Force">
         </a>
-      </div>
+      </div> -->
     </div>
 
     <div class="text-center">
@@ -299,11 +299,11 @@
           <img src="./images/sponsors/Subway.png" class="img-fluid" alt="Subway">
         </a>
       </div>-->
-      <div class="col-lg-3 text-center my-auto mx-auto">
+      <!-- <div class="col-lg-3 text-center my-auto mx-auto">
         <a href="https://www.airforce.com/careers/indemand-careers/special-warfare" class="title-sponsor">
           <img src="./images/sponsors/USAF_SpecialWarfare_K.png" class="img-fluid" alt="United States Air Force">
         </a>
-      </div>
+      </div> -->
     </div>
     <div class="row mx-6">
       <div class="col-lg-3 col-sm-6 my-autom mx-auto">
