--- a/sponsors.html
+++ b/sponsors.html
@@ -132,11 +132,11 @@
               <img src="./images/sponsors/Subway.png" class="img-fluid" alt="Subway">
             </a>
           </div>-->
-          <div class="col-md-3 text-center my-auto mx-auto">
+          <!-- <div class="col-md-3 text-center my-auto mx-auto">
             <a href="https://www.airforce.com/careers/indemand-careers/special-warfare" class="title-sponsors">
               <img src="./images/sponsors/USAF_SpecialWarfare_K.png" class="img-fluid" alt="United States Air Force">
             </a>
-          </div>
+          </div> -->
         </div>
         <div class="row">
           <div class="col-12 mt-3">
