Added Steamatic sponsor

--- a/sponsors.html
+++ b/sponsors.html
@@ -235,6 +235,11 @@
               <img src="./images/sponsors/monster.png" class="img-fluid" alt="Monster Energy">
             </a>
           </div>
+          <div class="col-4 col-md text-center my-auto">
+            <a href="https://www.steamaticwwi.com/" class="sponsors">
+              <img src="./images/sponsors/steamatic.png" class="img-fluid" alt="Steamatic">
+            </a>
+          </div>
         </div>
         <div class="row">
           <div class="col-12">
