--- a/lodging.html
+++ b/lodging.html
@@ -259,6 +259,11 @@
           <img src="./images/sponsors/monster.png" class="img-fluid" alt="Monster Energy">
         </a>
       </div>
+      <div class="col-lg col-6 text-center my-auto">
+        <a href="https://www.steamaticwwi.com/" class="sponsor">
+          <img src="./images/sponsors/steamatic.png" class="img-fluid" alt="Steamatic">
+        </a>
+      </div>
     </div>
     <p class="text-center my-1">Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a></p>
   </div>
