--- a/tickets.html
+++ b/tickets.html
@@ -219,23 +219,24 @@
           <img src="./images/sponsors/megaholiday.png" class="img-fluid" alt="Mega Holiday">
         </a>
       </div>
-      <div class="row mx-6">
-        <div class="col-lg-2 col-sm-6 my-auto mx-auto">
-          <a href="http://www.prestigervauto.com/" class="sponsor">
-            <img src="./images/sponsors/prestige1.png" class="img-fluid" alt="Prestige">
-          </a>
-        </div>
-        <div class="col-lg-2 col-sm-6 my-auto mx-auto">
-          <a href="http://anytimetrailer.com/" class="sponsor">
-            <img src="./images/sponsors/AnytimeTrailer.png" class="img-fluid" alt="Anytime Trailer">
-          </a>
-        </div>
-        <div class="col-lg-2 col-sm-6 my-auto mx-auto">
-          <a href="https://www.wissotalodge.com/" class="sponsor">
-            <img src="./images/sponsors/WissotaLodge.png" class="img-fluid" alt="Wissota Lodge">
-          </a>
-        </div>
+    </div>
+    <div class="row mx-6">
+      <div class="col-lg-2 col-sm-6 my-auto mx-auto">
+        <a href="http://www.prestigervauto.com/" class="sponsor">
+          <img src="./images/sponsors/prestige1.png" class="img-fluid" alt="Prestige">
+        </a>
       </div>
+      <div class="col-lg-2 col-sm-6 my-auto mx-auto">
+        <a href="http://anytimetrailer.com/" class="sponsor">
+          <img src="./images/sponsors/AnytimeTrailer.png" class="img-fluid" alt="Anytime Trailer">
+        </a>
+      </div>
+      <div class="col-lg-2 col-sm-6 my-auto mx-auto">
+        <a href="https://www.wissotalodge.com/" class="sponsor">
+          <img src="./images/sponsors/WissotaLodge.png" class="img-fluid" alt="Wissota Lodge">
+        </a>
+      </div>
+    </div>
     <div class="row mx-6">
       <!--<div class="col-lg col-6 text-center my-auto">
         <a href="http://www.uwec.edu/dining/" class="sponsor">
@@ -292,6 +293,11 @@
       <div class="col-lg col-6 text-center my-auto">
         <a href="https://www.monsterenergy.com/" class="sponsor">
           <img src="./images/sponsors/monster.png" class="img-fluid" alt="Monster Energy">
+        </a>
+      </div>
+      <div class="col-lg col-6 text-center my-auto">
+        <a href="https://www.steamaticwwi.com/" class="sponsor">
+          <img src="./images/sponsors/steamatic.png" class="img-fluid" alt="Steamatic">
         </a>
       </div>
     </div>
