Removed monster sponsor

--- a/sponsors.html
+++ b/sponsors.html
@@ -230,11 +230,11 @@
               <img src="./images/sponsors/Reconyx.png" class="img-fluid" alt="Reconyx">
             </a>
           </div>
-          <div class="col-4 col-md text-center my-auto">
+          <!-- <div class="col-4 col-md text-center my-auto">
             <a href="https://www.monsterenergy.com/" class="sponsors">
               <img src="./images/sponsors/monster.png" class="img-fluid" alt="Monster Energy">
             </a>
-          </div>
+          </div> -->
           <div class="col-4 col-md text-center my-auto">
             <a href="https://www.steamaticwwi.com/" class="sponsors">
               <img src="./images/sponsors/steamatic.png" class="img-fluid" alt="Steamatic">
