--- a/liveResults.html
+++ b/liveResults.html
@@ -245,11 +245,11 @@
           <img src="./images/sponsors/Reconyx.png" class="img-fluid" alt="Reconyx">
         </a>
       </div>
-      <div class="col-lg col-6 text-center my-auto">
+      <!-- <div class="col-lg col-6 text-center my-auto">
         <a href="https://www.monsterenergy.com/" class="sponsor">
           <img src="./images/sponsors/monster.png" class="img-fluid" alt="Monster Energy">
         </a>
-      </div>
+      </div> -->
       <div class="col-lg col-6 text-center my-auto">
         <a href="https://www.steamaticwwi.com/" class="sponsor">
           <img src="./images/sponsors/steamatic.png" class="img-fluid" alt="Steamatic">
