Improve footer/make it more readable. Sponsors page changes

--- a/directions.html
+++ b/directions.html
@@ -170,124 +170,92 @@
     </div>
   </div>
 
+  <!-- FOOTER -->
   <div class="footer container border border-bottom-0 pb-2 bg-light d-block mx-auto pt-2">
+    <!-- Platinum -->
     <div class="row mx-6">
-      <div class="col-lg-3 text-center my-auto mx-auto">
-        <a href="http://www.scheels.com/" class="title-sponsor">
+      <div class="col-md-5 text-center my-auto mx-auto">
+        <a href="http://www.scheels.com/" class="sponsor">
           <img src="./images/sponsors/scheels.png" class="img-fluid" alt="Scheels">
         </a>
       </div>
-      <div class="col-lg-3 text-center my-auto mx-auto">
-        <a href="http://www.eauclaireford.com/" class="title-sponsor">
+      <div class="col-md-5 text-center my-auto mx-auto">
+        <a href="http://www.eauclaireford.com/" class="sponsor">
           <img src="./images/sponsors/ford.png" class="img-fluid" alt="Ford">
         </a>
       </div>
-      <!-- <div class="col-lg-3 text-center my-auto mx-auto">
-        <a href="http://www.subway.com/subwayroot/default.aspx" class="title-sponsor">
-          <img src="./images/sponsors/Subway.png" class="img-fluid" alt="Subway">
-        </a>
-      </div> -->
-      <!-- <div class="col-lg-3 text-center my-auto mx-auto">
-        <a href="https://www.airforce.com/careers/indemand-careers/special-warfare" class="title-sponsor">
-          <img src="./images/sponsors/USAF_SpecialWarfare_K.png" class="img-fluid" alt="United States Air Force">
-        </a>
-      </div> -->
     </div>
+
+    <!-- Gold -->
     <div class="row mx-6">
-      <div class="col-lg-3 col-sm-6 my-autom mx-auto">
-        <a href="http://www.weau.com/" class="sponsor">
-          <img src="./images/sponsors/weau13.png" class="img-fluid" alt="WEAU13">
-        </a>
-      </div>
-      <div class="col-lg-2 col-sm-6 my-auto mx-auto">
+      <div class="col-md-3 text-center my-auto mx-auto">
         <a href="http://www.geteskimo.com/" class="sponsor">
           <img src="./images/sponsors/eskimo.png" class="img-fluid" alt="Eskimo">
         </a>
       </div>
-      <div class="col-lg-2 col-sm-6 my-auto mx-auto">
+      <div class="col-md-3 text-center my-auto mx-auto">
         <a href="http://www.megacoop.com/" class="sponsor">
           <img src="./images/sponsors/megaholiday.png" class="img-fluid" alt="Mega Holiday">
         </a>
       </div>
+      <div class="col-md-3 text-center my-auto mx-auto">
+        <a href="http://www.weau.com/" class="sponsor">
+          <img src="./images/sponsors/weau13.png" class="img-fluid" alt="WEAU13">
+        </a>
+      </div>
     </div>
+
     <div class="row mx-6">
-      <div class="col-lg-2 col-sm-6 my-auto mx-auto">
+      <div class="col-md-3 text-center my-auto mx-auto">
         <a href="http://anytimetrailer.com/" class="sponsor">
           <img src="./images/sponsors/AnytimeTrailer.png" class="img-fluid" alt="Anytime Trailer">
         </a>
       </div>
-      <div class="col-lg-2 col-sm-6 my-auto mx-auto">
+      <div class="col-md-3 text-center my-auto mx-auto">
         <a href="https://www.wissotalodge.com/" class="sponsor">
           <img src="./images/sponsors/WissotaLodge.png" class="img-fluid" alt="Wissota Lodge">
         </a>
       </div>
     </div>
+
+    <!-- Silver -->
     <div class="row mx-6">
-      <!--<div class="col-lg col-6 text-center my-auto">
-        <a href="http://www.uwec.edu/dining/" class="sponsor">
-          <img src="./images/sponsors/dining2020.png" class="img-fluid" alt="Dining">
-        </a>
-      </div>-->
-      <div class="col-lg col-6 text-center my-auto">
-        <a href="http://www.theedgepubandeatery.com/" class="sponsor">
-          <img src="./images/sponsors/edge.png" class="img-fluid" alt="The Edge">
+      <div class="col-md-2 text-center my-auto mx-auto">
+        <a href="https://www.nextgen-powersportscf.com/" class="sponsor">
+          <img src="./images/sponsors/xtreme1.png" class="img-fluid" alt="Xtreme">
         </a>
       </div>
-      <div class="col-lg col-6 text-center my-auto">
+      <div class="col-md-2 text-center my-auto mx-auto">
         <a href="http://www.theviewonlakewissota.com/" class="sponsor">
           <img src="./images/sponsors/view.png" class="img-fluid" alt="The View">
         </a>
       </div>
-      <!--
-      <div class="col-lg col-6 text-center my-auto">
-        <a href="https://ttmtech.com/" class="sponsor" class="sponsor">
-          <img src="./images/sponsors/ttmtech.png" class="img-fluid" alt="TTMTech">
+      <div class="col-md-2 text-center my-auto mx-auto">
+        <a href="http://www.theedgepubandeatery.com/" class="sponsor">
+          <img src="./images/sponsors/edge.png" class="img-fluid" alt="The Edge">
         </a>
       </div>
-      -->
-      <div class="col-lg col-6 text-center my-auto" class="sponsor">
-        <a href="http://www.xtrememotorsportsllc.com/" class="sponsor">
-          <img src="./images/sponsors/xtreme1.png" class="img-fluid" alt="Xtreme">
-        </a>
-      </div>
-      <!-- <div class="col-lg col-6 text-center my-auto">
-        <a href="http://www.leinie.com/" class="sponsor">
-          <img src="./images/sponsors/lein.png" class="img-fluid" alt="Leinenkugels">
-        </a>
-      </div> -->
-      <!--<div class="col-lg col-6 text-center my-auto">
-        <a href="https://www.aceautomall.com/" class="sponsor">
-          <img src="./images/sponsors/AceAutoMall.png" class="img-fluid" alt="Ace Auto Mall">
-        </a>
-      </div>-->
-      <div class="col-lg col-6 text-center my-auto">
+      <div class="col-md-2 text-center my-auto mx-auto">
         <a href="http://www.lakewissotasandbar.com/" class="sponsor">
-          <img style="width: 80px;" src="./images/sponsors/thesandbar.png" class="img-fluid" alt="The SandBar">
+          <img src="./images/sponsors/thesandbar.png" class="img-fluid" alt="The SandBar">
         </a>
       </div>
-      <!--<div class="col-lg col-6 text-center my-auto">
-        <a href="https://www.grizzlycoolers.com/" class="sponsor">
-          <img src="./images/sponsors/grizzly.png" class="img-fluid" alt="Grizzly Coolers">
-        </a>
-      </div>-->
-      <div class="col-lg col-6 text-center my-auto">
+      <div class="col-md-2 text-center my-auto mx-auto">
         <a href="http://www.reconyx.com/" class="sponsor">
           <img src="./images/sponsors/Reconyx.png" class="img-fluid" alt="Reconyx">
         </a>
       </div>
-      <!-- <div class="col-lg col-6 text-center my-auto">
-        <a href="https://www.monsterenergy.com/" class="sponsor">
-          <img src="./images/sponsors/monster.png" class="img-fluid" alt="Monster Energy">
-        </a>
-      </div> -->
-      <div class="col-lg col-6 text-center my-auto">
+      <div class="col-md-2 text-center my-auto mx-auto">
         <a href="https://www.steamaticwwi.com/" class="sponsor">
           <img src="./images/sponsors/steamatic.png" class="img-fluid" alt="Steamatic">
         </a>
       </div>
     </div>
+
     <p class="text-center my-1">Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a></p>
   </div>
+  <!-- END FOOTER -->
+
   <script type="text/javascript">
   function initMap() {
 
