--- a/sponsors.html
+++ b/sponsors.html
@@ -111,131 +111,105 @@
     </div>
 
     <div class="content container px-4">
+
+      <!-- Platinum Sponsors -->
         <div class="row">
           <div class="col-12 mt-3">
-            <h2 class="brand-blue text-center">Title Sponsors</h2>
+            <h1 class="brand-blue text-center">Platinum</h1>
           </div>
         </div>
+
         <div class="row">
-          <div class="col-md-3 text-center my-auto mx-auto">
+          <div class="col-md-5 text-center my-auto mx-auto">
             <a href="http://www.scheels.com/" class="title-sponsors">
               <img src="./images/sponsors/scheels.png" class="img-fluid" alt="Scheels">
             </a>
           </div>
-          <div class="col-md-3 text-center my-auto mx-auto">
+          <div class="col-md-5 text-center my-auto mx-auto">
             <a href="http://www.eauclaireford.com/" class="title-sponsors">
               <img src="./images/sponsors/ford.png" class="img-fluid" alt="Ford">
             </a>
           </div>
-          <!--<div class="col-md-3 text-center my-auto mx-auto">
-            <a href="http://www.subway.com/subwayroot/default.aspx" class="title-sponsors">
-              <img src="./images/sponsors/Subway.png" class="img-fluid" alt="Subway">
-            </a>
-          </div>-->
-          <!-- <div class="col-md-3 text-center my-auto mx-auto">
-            <a href="https://www.airforce.com/careers/indemand-careers/special-warfare" class="title-sponsors">
-              <img src="./images/sponsors/USAF_SpecialWarfare_K.png" class="img-fluid" alt="United States Air Force">
-            </a>
-          </div> -->
         </div>
-        <div class="row">
-          <div class="col-12 mt-3">
-            <h3 class="brand-blue text-center">Sponsors</h3>
+
+      <!-- Gold Sponsors -->
+      <div class="row">
+          <div class="col-12 mt-5">
+            <h2 class="brand-blue text-center">Gold</h2>
           </div>
         </div>
+
         <div class="row">
-          <div class="col-3 text-center my-auto mx-auto">
-            <a href="http://www.weau.com/" class="sponsors">
-              <img src="./images/sponsors/weau13.png" class="img-fluid" alt="WEAU13">
-            </a>
-          </div>
-          <div class="col-2 text-center my-auto mx-auto">
+          <div class="col-md-3 text-center my-auto mx-auto">
             <a href="http://www.geteskimo.com/" class="sponsors">
               <img src="./images/sponsors/eskimo.png" class="img-fluid" alt="Eskimo">
             </a>
           </div>
-          <div class="col-2 text-center my-auto mx-auto">
+          <div class="col-md-3 text-center my-auto mx-auto">
             <a href="http://www.megacoop.com/" class="sponsors">
               <img src="./images/sponsors/megaholiday.png" class="img-fluid" alt="Mega Holiday">
             </a>
           </div>
+          <div class="col-md-3 text-center my-auto mx-auto">
+            <a href="http://www.weau.com/" class="sponsors">
+              <img src="./images/sponsors/weau13.png" class="img-fluid" alt="WEAU13">
+            </a>
+          </div>
         </div>
         <div class="row">
-          <div class="col-2 text-center my-auto mx-auto">
+          <div class="col-md-3 text-center my-auto mx-auto">
             <a href="http://anytimetrailer.com/" class="sponsors">
               <img src="./images/sponsors/AnytimeTrailer.png" class="img-fluid" alt="Anytime Trailer">
             </a>
           </div>
-          <div class="col-2 text-center my-auto mx-auto">
+          <div class="col-md-3 text-center my-auto mx-auto">
             <a href="https://www.wissotalodge.com/" class="sponsors">
               <img src="./images/sponsors/WissotaLodge.png" class="img-fluid" alt="Wissota Lodge">
             </a>
           </div>
         </div>
+
+        <!-- Silver Sponsors -->
         <div class="row">
-          <!--<div class="col-4 col-md text-center my-auto">
-            <a href="http://www.uwec.edu/dining/" class="sponsors">
-              <img src="./images/sponsors/dining2020.png" class="img-fluid" alt="Dining">
-            </a>
-          </div>-->
-          <div class="col-4 col-md text-center my-auto">
-            <a href="http://www.theedgepubandeatery.com/" class="sponsors">
-              <img src="./images/sponsors/edge.png" class="img-fluid" alt="The Edge">
+          <div class="col-12 mt-5">
+            <h3 class="brand-blue text-center">Silver</h3>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-2 text-center my-auto mx-auto">
+            <a href="https://www.nextgen-powersportscf.com/" class="sponsors">
+              <img src="./images/sponsors/xtreme1.png" class="img-fluid" alt="Xtreme">
             </a>
           </div>
-          <div class="col-4 col-md text-center my-auto">
+          <div class="col-md-2 text-center my-auto mx-auto">
             <a href="http://www.theviewonlakewissota.com/" class="sponsors">
               <img src="./images/sponsors/view.png" class="img-fluid" alt="The View">
             </a>
           </div>
-          <!--
-          <div class="col-4 col-md text-center my-auto">
-            <a href="https://ttmtech.com/" class="sponsors">
-              <img src="./images/sponsors/ttmtech.png" class="img-fluid" alt="TTMTech">
+          <div class="col-md-2 text-center my-auto mx-auto">
+            <a href="http://www.theedgepubandeatery.com/" class="sponsors">
+              <img src="./images/sponsors/edge.png" class="img-fluid" alt="The Edge">
             </a>
           </div>
-          -->
-          <div class="col-4 col-md text-center my-auto">
-            <a href="http://www.xtrememotorsportsllc.com/" class="sponsors">
-              <img src="./images/sponsors/xtreme1.png" class="img-fluid" alt="Xtreme">
-            </a>
-          </div>
-          <!-- <div class="col-lg col-6 text-center my-auto">
-        <a href="http://www.leinie.com/" class="sponsor">
-          <img src="./images/sponsors/lein.png" class="img-fluid" alt="Leinenkugels">
-        </a>
-      </div> -->
-          <!--<div class="col-4 col-md text-center my-auto">
-            <a href="https://www.aceautomall.com/" class="sponsors">
-              <img src="./images/sponsors/AceAutoMall.png" class="img-fluid" alt="Ace Auto Mall">
-            </a>
-          </div>-->
-          <div class="col-4 col-md text-center my-auto">
+          <div class="col-md-2 text-center my-auto mx-auto">
             <a href="http://www.lakewissotasandbar.com/" class="sponsors">
-              <img style="width: 80px;" src="./images/sponsors/thesandbar.png" class="img-fluid" alt="The SandBar">
+              <img src="./images/sponsors/thesandbar.png" class="img-fluid" alt="The SandBar">
             </a>
           </div>
-          <!--<div class="col-4 col-md text-center my-auto">
-            <a href="https://www.grizzlycoolers.com/" class="sponsors">
-              <img src="./images/sponsors/grizzly.png" class="img-fluid" alt="Grizzly Coolers">
-            </a>
-          </div>-->
-          <div class="col-4 col-md text-center my-auto">
+          <div class="col-md-2 text-center my-auto mx-auto">
             <a href="http://www.reconyx.com/" class="sponsors">
               <img src="./images/sponsors/Reconyx.png" class="img-fluid" alt="Reconyx">
             </a>
           </div>
-          <!-- <div class="col-4 col-md text-center my-auto">
-            <a href="https://www.monsterenergy.com/" class="sponsors">
-              <img src="./images/sponsors/monster.png" class="img-fluid" alt="Monster Energy">
-            </a>
-          </div> -->
-          <div class="col-4 col-md text-center my-auto">
+          <div class="col-md-2 text-center my-auto mx-auto">
             <a href="https://www.steamaticwwi.com/" class="sponsors">
               <img src="./images/sponsors/steamatic.png" class="img-fluid" alt="Steamatic">
             </a>
           </div>
         </div>
+        
+
         <div class="row">
           <div class="col-12">
             <p class="brand-blue text-center">If you wish to become a sponsor, please contact us through our contact page.</p>
