Add Big Fish Encounters as silver level sponsor

--- a/index.html
+++ b/index.html
@@ -161,16 +161,6 @@
           <img class="img-fluid" src="./images/sponsors/ford.png" alt="Ford">
         </a>
       </div>
-      <!--<div class="col my-auto">
-        <a href="http://www.subway.com/subwayroot/default.aspx" target="_blank">
-          <img class="img-fluid" src="./images/sponsors/Subway.png" alt="Subway">
-        </a>
-      </div>-->
-      <!-- <div class="col my-auto">
-        <a href="https://www.airforce.com/careers/indemand-careers/special-warfare" target="_blank">
-          <img class="img-fluid" src="./images/sponsors/USAF_SpecialWarfare_K.png" alt="United States Air Force">
-        </a>
-      </div> -->
     </div>
 
     <div class="text-center">
@@ -178,13 +168,13 @@
       <h1 class="headers brand-blue"><b>9th Annual JIG'S UP Blugold Ice Fishing Contest</b></h1>
       <div class="row justify-content-center">
         <div class="col-4 col-md-3">
-          <a href="http://www.uwec.edu/recreation"><img src="./images/recreation2.png" class=" logo img-fluid " alt="Recreation"></a>
+          <a href="http://www.uwec.edu/recreation" target="_blank"><img src="./images/recreation2.png" class=" logo img-fluid " alt="Recreation"></a>
         </div>
         <div class="col-4 col-md-3">
-          <a href="http://www.e-clubhouse.org/sites/lakewissota/"><img src="./images/lions2.png" class="logo img-fluid" alt="Lions Club"></a>
+          <a href="http://www.e-clubhouse.org/sites/lakewissota/" target="_blank"><img src="./images/lions2.png" class="logo img-fluid" alt="Lions Club"></a>
         </div>
         <div class="col-4 col-md-3">
-          <a href="http://blugolds.com/landing/index"><img src="./images/athletics2.png" class="logo img-fluid" alt="Athletics"></a>
+          <a href="http://blugolds.com/landing/index" target="_blank"><img src="./images/athletics2.png" class="logo img-fluid" alt="Athletics"></a>
         </div>
       </div>
     </div>
@@ -287,12 +277,12 @@
     <!-- Platinum -->
     <div class="row mx-6">
       <div class="col-md-4 text-center my-auto mx-auto">
-        <a href="http://www.scheels.com/" class="sponsor">
+        <a href="http://www.scheels.com/" target="_blank" class="sponsor">
           <img src="./images/sponsors/scheels.png" class="img-fluid" alt="Scheels">
         </a>
       </div>
       <div class="col-md-4 text-center my-auto mx-auto">
-        <a href="http://www.eauclaireford.com/" class="sponsor">
+        <a href="http://www.eauclaireford.com/" target="_blank" class="sponsor">
           <img src="./images/sponsors/ford.png" class="img-fluid" alt="Ford">
         </a>
       </div>
@@ -301,17 +291,17 @@
     <!-- Gold -->
     <div class="row mx-6">
       <div class="col-md-3 text-center my-auto mx-auto">
-        <a href="http://www.geteskimo.com/" class="sponsor">
+        <a href="http://www.geteskimo.com/" target="_blank" class="sponsor">
           <img src="./images/sponsors/eskimo.png" class="img-fluid" alt="Eskimo">
         </a>
       </div>
       <div class="col-md-3 text-center my-auto mx-auto">
-        <a href="http://www.megacoop.com/" class="sponsor">
+        <a href="http://www.megacoop.com/" target="_blank" class="sponsor">
           <img src="./images/sponsors/megaholiday.png" class="img-fluid" alt="Mega Holiday">
         </a>
       </div>
       <div class="col-md-3 text-center my-auto mx-auto">
-        <a href="http://www.weau.com/" class="sponsor">
+        <a href="http://www.weau.com/" target="_blank" class="sponsor">
           <img src="./images/sponsors/weau13.png" class="img-fluid" alt="WEAU13">
         </a>
       </div>
@@ -319,12 +309,12 @@
 
     <div class="row mx-6">
       <div class="col-md-3 text-center my-auto mx-auto">
-        <a href="http://anytimetrailer.com/" class="sponsor">
+        <a href="http://anytimetrailer.com/" target="_blank" class="sponsor">
           <img src="./images/sponsors/AnytimeTrailer.png" class="img-fluid" alt="Anytime Trailer">
         </a>
       </div>
       <div class="col-md-3 text-center my-auto mx-auto">
-        <a href="https://www.wissotalodge.com/" class="sponsor">
+        <a href="https://www.wissotalodge.com/" target="_blank" class="sponsor">
           <img src="./images/sponsors/WissotaLodge.png" class="img-fluid" alt="Wissota Lodge">
         </a>
       </div>
@@ -333,33 +323,40 @@
     <!-- Silver -->
     <div class="row mx-6">
       <div class="col-md-2 text-center my-auto mx-auto">
-        <a href="https://www.nextgen-powersportscf.com/" class="sponsor">
+        <a href="https://www.nextgen-powersportscf.com/" target="_blank" class="sponsor">
           <img src="./images/sponsors/xtreme1.png" class="img-fluid" alt="Xtreme">
         </a>
       </div>
       <div class="col-md-2 text-center my-auto mx-auto">
-        <a href="http://www.theviewonlakewissota.com/" class="sponsor">
+        <a href="http://www.theviewonlakewissota.com/" target="_blank" class="sponsor">
           <img src="./images/sponsors/view.png" class="img-fluid" alt="The View">
         </a>
       </div>
       <div class="col-md-2 text-center my-auto mx-auto">
-        <a href="http://www.theedgepubandeatery.com/" class="sponsor">
+        <a href="http://www.theedgepubandeatery.com/" target="_blank" class="sponsor">
           <img src="./images/sponsors/edge.png" class="img-fluid" alt="The Edge">
         </a>
       </div>
+    </div>
+    <div class="row mx-6">
       <div class="col-md-2 text-center my-auto mx-auto">
-        <a href="http://www.lakewissotasandbar.com/" class="sponsor">
+        <a href="http://www.lakewissotasandbar.com/" target="_blank" class="sponsor">
           <img src="./images/sponsors/thesandbar.png" class="img-fluid" alt="The SandBar">
         </a>
       </div>
       <div class="col-md-2 text-center my-auto mx-auto">
-        <a href="http://www.reconyx.com/" class="sponsor">
+        <a href="http://www.reconyx.com/" target="_blank" class="sponsor">
           <img src="./images/sponsors/Reconyx.png" class="img-fluid" alt="Reconyx">
         </a>
       </div>
       <div class="col-md-2 text-center my-auto mx-auto">
-        <a href="https://www.steamaticwwi.com/" class="sponsor">
+        <a href="https://www.steamaticwwi.com/" target="_blank" class="sponsor">
           <img src="./images/sponsors/steamatic.png" class="img-fluid" alt="Steamatic">
+        </a>
+      </div>
+      <div class="col-md-2 text-center my-auto mx-auto">
+        <a href="https://bigfishencounters.com/" target="_blank" class="sponsor">
+          <img src="./images/sponsors/bigfish.png" class="img-fluid" alt="Big Fish Encounters">
         </a>
       </div>
     </div>
