--- a/prizes.html
+++ b/prizes.html
@@ -2582,12 +2582,12 @@
     <!-- Platinum -->
     <div class="row mx-6">
       <div class="col-md-4 text-center my-auto mx-auto">
-        <a href="http://www.scheels.com/" class="sponsor">
+        <a href="http://www.scheels.com/" target="_blank" class="sponsor">
           <img src="./images/sponsors/scheels.png" class="img-fluid" alt="Scheels">
         </a>
       </div>
       <div class="col-md-4 text-center my-auto mx-auto">
-        <a href="http://www.eauclaireford.com/" class="sponsor">
+        <a href="http://www.eauclaireford.com/" target="_blank" class="sponsor">
           <img src="./images/sponsors/ford.png" class="img-fluid" alt="Ford">
         </a>
       </div>
@@ -2596,17 +2596,17 @@
     <!-- Gold -->
     <div class="row mx-6">
       <div class="col-md-3 text-center my-auto mx-auto">
-        <a href="http://www.geteskimo.com/" class="sponsor">
+        <a href="http://www.geteskimo.com/" target="_blank" class="sponsor">
           <img src="./images/sponsors/eskimo.png" class="img-fluid" alt="Eskimo">
         </a>
       </div>
       <div class="col-md-3 text-center my-auto mx-auto">
-        <a href="http://www.megacoop.com/" class="sponsor">
+        <a href="http://www.megacoop.com/" target="_blank" class="sponsor">
           <img src="./images/sponsors/megaholiday.png" class="img-fluid" alt="Mega Holiday">
         </a>
       </div>
       <div class="col-md-3 text-center my-auto mx-auto">
-        <a href="http://www.weau.com/" class="sponsor">
+        <a href="http://www.weau.com/" target="_blank" class="sponsor">
           <img src="./images/sponsors/weau13.png" class="img-fluid" alt="WEAU13">
         </a>
       </div>
@@ -2614,12 +2614,12 @@
 
     <div class="row mx-6">
       <div class="col-md-3 text-center my-auto mx-auto">
-        <a href="http://anytimetrailer.com/" class="sponsor">
+        <a href="http://anytimetrailer.com/" target="_blank" class="sponsor">
           <img src="./images/sponsors/AnytimeTrailer.png" class="img-fluid" alt="Anytime Trailer">
         </a>
       </div>
       <div class="col-md-3 text-center my-auto mx-auto">
-        <a href="https://www.wissotalodge.com/" class="sponsor">
+        <a href="https://www.wissotalodge.com/" target="_blank" class="sponsor">
           <img src="./images/sponsors/WissotaLodge.png" class="img-fluid" alt="Wissota Lodge">
         </a>
       </div>
@@ -2628,39 +2628,47 @@
     <!-- Silver -->
     <div class="row mx-6">
       <div class="col-md-2 text-center my-auto mx-auto">
-        <a href="https://www.nextgen-powersportscf.com/" class="sponsor">
+        <a href="https://www.nextgen-powersportscf.com/" target="_blank" class="sponsor">
           <img src="./images/sponsors/xtreme1.png" class="img-fluid" alt="Xtreme">
         </a>
       </div>
       <div class="col-md-2 text-center my-auto mx-auto">
-        <a href="http://www.theviewonlakewissota.com/" class="sponsor">
+        <a href="http://www.theviewonlakewissota.com/" target="_blank" class="sponsor">
           <img src="./images/sponsors/view.png" class="img-fluid" alt="The View">
         </a>
       </div>
       <div class="col-md-2 text-center my-auto mx-auto">
-        <a href="http://www.theedgepubandeatery.com/" class="sponsor">
+        <a href="http://www.theedgepubandeatery.com/" target="_blank" class="sponsor">
           <img src="./images/sponsors/edge.png" class="img-fluid" alt="The Edge">
         </a>
       </div>
+    </div>
+    <div class="row mx-6">
       <div class="col-md-2 text-center my-auto mx-auto">
-        <a href="http://www.lakewissotasandbar.com/" class="sponsor">
+        <a href="http://www.lakewissotasandbar.com/" target="_blank" class="sponsor">
           <img src="./images/sponsors/thesandbar.png" class="img-fluid" alt="The SandBar">
         </a>
       </div>
       <div class="col-md-2 text-center my-auto mx-auto">
-        <a href="http://www.reconyx.com/" class="sponsor">
+        <a href="http://www.reconyx.com/" target="_blank" class="sponsor">
           <img src="./images/sponsors/Reconyx.png" class="img-fluid" alt="Reconyx">
         </a>
       </div>
       <div class="col-md-2 text-center my-auto mx-auto">
-        <a href="https://www.steamaticwwi.com/" class="sponsor">
+        <a href="https://www.steamaticwwi.com/" target="_blank" class="sponsor">
           <img src="./images/sponsors/steamatic.png" class="img-fluid" alt="Steamatic">
+        </a>
+      </div>
+      <div class="col-md-2 text-center my-auto mx-auto">
+        <a href="https://bigfishencounters.com/" target="_blank" class="sponsor">
+          <img src="./images/sponsors/bigfish.png" class="img-fluid" alt="Big Fish Encounters">
         </a>
       </div>
     </div>
 
     <p class="text-center my-1">Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a></p>
   </div>
+
   <!-- END FOOTER -->
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
