--- a/sponsors.html
+++ b/sponsors.html
@@ -121,12 +121,12 @@
 
         <div class="row">
           <div class="col-md-4 text-center my-auto mx-auto">
-            <a href="http://www.scheels.com/" class="title-sponsors">
+            <a href="http://www.scheels.com/" target="_blank" class="title-sponsors">
               <img src="./images/sponsors/scheels.png" class="img-fluid" alt="Scheels">
             </a>
           </div>
           <div class="col-md-4 text-center my-auto mx-auto">
-            <a href="http://www.eauclaireford.com/" class="title-sponsors">
+            <a href="http://www.eauclaireford.com/" target="_blank" class="title-sponsors">
               <img src="./images/sponsors/ford.png" class="img-fluid" alt="Ford">
             </a>
           </div>
@@ -141,29 +141,29 @@
 
         <div class="row">
           <div class="col-md-3 text-center my-auto mx-auto">
-            <a href="http://www.geteskimo.com/" class="sponsors">
+            <a href="http://www.geteskimo.com/" target="_blank" class="sponsors">
               <img src="./images/sponsors/eskimo.png" class="img-fluid" alt="Eskimo">
             </a>
           </div>
           <div class="col-md-3 text-center my-auto mx-auto">
-            <a href="http://www.megacoop.com/" class="sponsors">
+            <a href="http://www.megacoop.com/" target="_blank" class="sponsors">
               <img src="./images/sponsors/megaholiday.png" class="img-fluid" alt="Mega Holiday">
             </a>
           </div>
           <div class="col-md-3 text-center my-auto mx-auto">
-            <a href="http://www.weau.com/" class="sponsors">
+            <a href="http://www.weau.com/" target="_blank" class="sponsors">
               <img src="./images/sponsors/weau13.png" class="img-fluid" alt="WEAU13">
             </a>
           </div>
         </div>
         <div class="row">
           <div class="col-md-3 text-center my-auto mx-auto">
-            <a href="http://anytimetrailer.com/" class="sponsors">
+            <a href="http://anytimetrailer.com/" target="_blank" class="sponsors">
               <img src="./images/sponsors/AnytimeTrailer.png" class="img-fluid" alt="Anytime Trailer">
             </a>
           </div>
           <div class="col-md-3 text-center my-auto mx-auto">
-            <a href="https://www.wissotalodge.com/" class="sponsors">
+            <a href="https://www.wissotalodge.com/" target="_blank" class="sponsors">
               <img src="./images/sponsors/WissotaLodge.png" class="img-fluid" alt="Wissota Lodge">
             </a>
           </div>
@@ -178,33 +178,40 @@
 
         <div class="row">
           <div class="col-md-2 text-center my-auto mx-auto">
-            <a href="https://www.nextgen-powersportscf.com/" class="sponsors">
+            <a href="https://www.nextgen-powersportscf.com/" target="_blank" class="sponsors">
               <img src="./images/sponsors/xtreme1.png" class="img-fluid" alt="Xtreme">
             </a>
           </div>
           <div class="col-md-2 text-center my-auto mx-auto">
-            <a href="http://www.theviewonlakewissota.com/" class="sponsors">
+            <a href="http://www.theviewonlakewissota.com/" target="_blank" class="sponsors">
               <img src="./images/sponsors/view.png" class="img-fluid" alt="The View">
             </a>
           </div>
           <div class="col-md-2 text-center my-auto mx-auto">
-            <a href="http://www.theedgepubandeatery.com/" class="sponsors">
+            <a href="http://www.theedgepubandeatery.com/" target="_blank" class="sponsors">
               <img src="./images/sponsors/edge.png" class="img-fluid" alt="The Edge">
             </a>
           </div>
+        </div>
+        <div class="row">
           <div class="col-md-2 text-center my-auto mx-auto">
-            <a href="http://www.lakewissotasandbar.com/" class="sponsors">
+            <a href="http://www.lakewissotasandbar.com/" target="_blank" class="sponsors">
               <img src="./images/sponsors/thesandbar.png" class="img-fluid" alt="The SandBar">
             </a>
           </div>
           <div class="col-md-2 text-center my-auto mx-auto">
-            <a href="http://www.reconyx.com/" class="sponsors">
+            <a href="http://www.reconyx.com/" target="_blank" class="sponsors">
               <img src="./images/sponsors/Reconyx.png" class="img-fluid" alt="Reconyx">
             </a>
           </div>
           <div class="col-md-2 text-center my-auto mx-auto">
-            <a href="https://www.steamaticwwi.com/" class="sponsors">
+            <a href="https://www.steamaticwwi.com/" target="_blank" class="sponsors">
               <img src="./images/sponsors/steamatic.png" class="img-fluid" alt="Steamatic">
+            </a>
+          </div>
+          <div class="col-md-2 text-center my-auto mx-auto">
+            <a href="https://bigfishencounters.com/" target="_blank" class="sponsors">
+              <img src="./images/sponsors/bigfish.png" class="img-fluid" alt="Big Fish Encounters">
             </a>
           </div>
         </div>
